change getPicture endpoint to get a picture outside of the classpath